# Cpp-Classic-Games

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
01 Tetris/: main.cpp
Arkanoid/: main.cpp
Asteroids/: CMakeLists.txt  main.cpp
Bejeweled/: main.cpp
Doodle_Jump/: CMakeLists.txt  main.cpp
Fifteen/: main.cpp
Mahjong_Solitaire/: main.cpp
Minesweeper/: main.cpp
NetWalk/: main.cpp
Outrun/: main.cpp
Racing/: main.cpp
SFML-2.5.1/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
SFML-2.5.1/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
Snake/: main.cpp
Tetris/: CMakeLists.txt  main.cpp
games/: Asteroids.cpp  Asteroids.h  Game.cpp  Game.h  Jump.cpp  Jump.h  Minesweeper.cpp  Minesweeper.h  Racing.cpp  Racing.h  Snake.cpp  Snake.h  Tetris.cpp  Tetris.h
menu/: Menu.cpp  Menu.h
